# image-vector-search

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: researcher.md
.github/workflows/: docker.yml  publish.yml
docs/: api.md  image-vector-search.md  usage.md  图片向量检索.md
docs/plans/: 2026-03-14-image-vector-search-design.md  2026-03-14-image-vector-search.md  2026-03-18-admin-tag-category-image-detail-design.md  2026-03-18-admin-tag-category-image-detail.md  2026-03-19-gemini-embedding-2-preview-plan.md  2026-04-07-admin-shell-curation-design.md  2026-04-07-admin-shell-curation.md  2026-04-07-purge-inactive-images.md  2026-04-07-test-image-dataset-design.md  2026-04-07-test-image-dataset.md  2026-04-08-global-navigation-branding.md  2026-04-11-dev-start-command.md  2026-04-11-oversized-images-plan.md
example-index/: metadata.db  milvus.db
openclaw-skill/: SKILL.md
sample-data/: README.md
sample-data/demo-set/: manifest.json
scripts/: build_demo_image_set.py
skills/: README.md
skills/image-search/: SKILL.md
src/image_search_mcp/: __init__.py  __main__.py  app.py  config.py  runtime.py
src/image_vector_search/: __init__.py  __main__.py  app.py  config.py  runtime.py
tests/fixtures/: README.md
tests/integration/: conftest.py  test_album_api.py  test_app_bootstrap.py  test_bulk_api.py  test_end_to_end_search.py  test_filesystem_images_api.py  test_fixture_dataset.py  test_folder_browser_api.py  test_indexing_service.py  test_mcp_tools.py  (+3 more)
(+274 files in other folders)
