[project]
name = "image-search-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "fastmcp>=3,<4",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "pillow>=11,<12",
  "pydantic-settings>=2.8,<3",
  "pymilvus>=2.5,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "respx>=0.22,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
